Criar Grid personalizado

--- a/103-grid/index.html
+++ b/103-grid/index.html
@@ -5,13 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>CSS.Grid</title>
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <title>PunkCornio</title>
 </head>
 <body>
-    <header>HEADER</header>
-    <nav>NAVBAR</nav>
-    <section>SECTION</section>
-    <aside>ASIDE</aside>
-    <footer>FOOTER</footer>
+    <header>
+        <img src="images/logo.jpg" alt="Logo">
+    </header>
+    <nav>
+        <a href="">BatCornio</a>
+        <a href="">FunkCornio</a>
+        <a href="">GatiCornio</a>
+    </nav>
+    <section>
+
+    </section>
+
+    <aside>
+        <h2>Unicórnios</h2>
+        <p>Unicórnio, também conhecido como licórnio ou licorne, é um animal mitológico que tem a forma de um cavalo, geralmente branco, com um único chifre em espiral. O nome "unicórnio" deriva do latino unicornis: 
+            do prefixo uni- e do substantivo cornu, "um só chifre". Sua imagem está associada à pureza e à força.
+            
+        </p>
+    </aside>
+    <footer>
+        <div>
+            <img src="images/socialMedia/facebook-logo-button (1).png" alt="">
+            <img src="images/socialMedia/instagram-logo.png" alt="">
+            <img src="images/socialMedia/linkedin.png" alt="">
+            <img src="images/socialMedia/twitter-logo-button.png" alt="">
+        </div>
+    </footer>
+
 </body>
 </html>
